Creación de seccion 'Tecnologías'

--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,8 +1,8 @@
-<header>
+<head>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Quattrocento&family=Rufina:wght@700&display=swap');
   </style>
-</header>
+</head>
 
 <!--Titulo-->
 <div class="container">
