--- a/src/app/components/tecnologias/tecnologias.component.html
+++ b/src/app/components/tecnologias/tecnologias.component.html
@@ -1,1 +1,66 @@
-<p>tecnologias works!</p>
+<head>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Quattrocento&family=Rufina:wght@700&display=swap');
+    </style>
+</head>
+
+<!--Titulo-->
+<div class="container">
+    <div class="col-12 py-4 pt-5" id="contenedor">
+        <h2 class="display-6 mt-3 mb-3 h2-lines" id="titulo">TECNOLOGÍAS</h2>
+    </div>
+</div>
+
+<!--Tecnologías-->
+<div class="container">
+    <div class="row row-cols-md-4 g-4">
+        <div class="col">
+            <div class="card">
+                <img src="../../../assets/img/html5-logo.png" class="card-img-top" alt="HTML5">
+                <h5 class="card-title text-center">HTML5</h5>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="../../../assets/img/css3-logo.png" class="card-img-top" alt="CSS3">
+                <h5 class="card-title text-center">CSS3</h5>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="../../../assets/img/bootstrap-logo.png" class="card-img-top" alt="Bootstrap">
+                <h5 class="card-title text-center">Bootstrap</h5>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="../../../assets/img/angular-logo.png" class="card-img-top" alt="Angular">
+                <h5 class="card-title text-center">Angular</h5>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="../../../assets/img/javascript-logo.png" class="card-img-top" alt="JavaScript">
+                <h5 class="card-title text-center">JavaScript</h5>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="../../../assets/img/git-logo.png" class="card-img-top" alt="Git">
+                <h5 class="card-title text-center">Git</h5>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="../../../assets/img/java-logo.png" class="card-img-top" alt="Java">
+                <h5 class="card-title text-center">Java</h5>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="../../../assets/img/spring-boot-logo.png" class="card-img-top" alt="Spring">
+                <h5 class="card-title text-center">Spring Boot</h5>
+            </div>
+        </div>
+    </div>
+</div>
