--- a/src/app/components/sobre-mi/sobre-mi.component.html
+++ b/src/app/components/sobre-mi/sobre-mi.component.html
@@ -1,8 +1,8 @@
-<header>
+<head>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Rufina:wght@700&display=swap');
     </style>
-</header>
+</head>
 
 <section class="container-fluid mt-3">
     <div class="container py-4 pt-5">
