Creación de sección 'Proyectos'

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-sobre-mi></app-sobre-mi>
 <app-educacion></app-educacion>
 <app-tecnologias></app-tecnologias>
+<app-proyectos></app-proyectos>
 <router-outlet></router-outlet>
