--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 <app-educacion></app-educacion>
 <app-tecnologias></app-tecnologias>
 <app-proyectos></app-proyectos>
+<app-contacto></app-contacto>
 <router-outlet></router-outlet>
