--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
 <app-tecnologias></app-tecnologias>
 <app-proyectos></app-proyectos>
 <app-contacto></app-contacto>
+<app-footer></app-footer>
 <router-outlet></router-outlet>
