Corrección de errores y llenado de casillas

--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,12 +1,6 @@
-<head>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Quattrocento&family=Rufina:wght@700&display=swap');
-  </style>
-</head>
-
 <!--Titulo-->
 <div class="container">
-  <div class="col-12 py-4 pt-5" id="contenedor">
+  <div class="col-12 py-4 pt-3" id="contenedor">
     <h2 class="display-6 mt-3 mb-3 h2-lines" id="titulo">EDUCACIÓN</h2>
   </div>
 </div>
@@ -21,10 +15,9 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
+            <h5 class="card-title">Tec. Superior en Desarrollo Web y Aplicaciones Moviles</h5>
+            <p class="card-text"><small class="text-muted">2022</small></p>
+            <p class="card-text">Instituto Superior Politécnico de Córdoba</p>
           </div>
         </div>
       </div>
@@ -41,10 +34,9 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
+            <h5 class="card-title">Desarrolladora Web Full-Stack con Java</h5>
+            <p class="card-text"><small class="text-muted">Nov 2021 - Jun 2022</small></p>
+            <p class="card-text">Plan Nacional de Formación en Programación: Argentina Programa | 2da Etapa: #YoProgramo</p>
           </div>
         </div>
       </div>
@@ -61,10 +53,9 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content. This content is a little bit longer.</p>
+            <h5 class="card-title">Desarrolladora Full-Stack con Java</h5>
+            <p class="card-text"><small class="text-muted">May 2021 - Nov 2021</small></p>
+            <p class="card-text">Bootcamp Digit@lers | Dictado por EducaciónIT | Becada por Telecom</p>
           </div>
         </div>
       </div>
