--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,2 +1,3 @@
-<app-navbar></app-navbar>
-<app-banner></app-banner>
+<div class="mt-5">
+    <img src="../../../assets/img/banner.png" class="img-thumbnail" alt="banner">
+</div>>
