--- a/src/app/components/sobre-mi/sobre-mi.component.html
+++ b/src/app/components/sobre-mi/sobre-mi.component.html
@@ -1,24 +1,23 @@
-<head>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Rufina:wght@700&display=swap');
-    </style>
-</head>
-
+<!--Titulo-->
 <section class="container-fluid mt-3">
-    <div class="container py-4 pt-5">
+    <div class="container py-4 pt-3">
         <h2 class="display-6 mt-3 mb-3 h2-lines" id="titulo">SOBRE MÍ</h2>
+        <!--Foto-->
         <div class="row align-items-center py-3">
             <div class="col-sm-3">
-                <img src="../../../assets/img/yo.jpg" alt="Foto mia" class="rounded-circle img-fluid">
+                <img src="../../../assets/img/avatar.jpg" alt="Foto mia" class="rounded-circle img-fluid">
             </div>
+            <!--Descripción-->
             <div class="col-sm-8 mt-3">
-                <p class="fs-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam officiis fugiat
-                    molestias, aut voluptatum, eligendi inventore aspernatur voluptate et error quasi, voluptates
-                    explicabo mollitia earum rerum qui. Eos, praesentium voluptas.
+                <p class="fs-4">¡Hola! Me llamo Natalia, soy de la provincia de Tucumán, me gustan los animales y soy
+                    TeamMate🧉.
                 </p>
-                <br>
-                <p class="fs-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quia quasi a officia
-                    blanditiis, molestiae beatae dolores ex quisquam impedit nostrum quibusdam voluptatem porro u</p>
+                <p class="fs-4">Soy una persona creativa e inquieta a la que le gusta estar en constante aprendizaje. Me
+                    gusta trabajar en equipo y la retroalimentación que esto significa.
+                </p>
+                <p class="fs-4">Arranqué en este gran mundo de la programación a partir de cursos gratuitos en los que
+                    me dieron una vacante o fui becada como en Digit@lers. Actualmente, estoy cursando la carrera de
+                    Desarrollo Web y Aplicaciones Moviles en el ISPC.</p>
             </div>
         </div>
     </div>
