--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+#titulo {
+    font-family: 'Rufina', serif;
+    size: 90PX;
+}
+
+.h2-lines{
+    display:inline-block;
+    position:relative;
+    left:5rem;
+  }
+  
+.h2-lines::after,.h2-lines::before{
+    content:"";
+    position:absolute;
+    width:4.2rem;
+    height:.15rem;
+    background-color: rgb(186, 104, 200);
+    top:1.3rem;
+  }
+
+.h2-lines::before{
+    left: -5rem;   
+  }
+  
+.h2-lines::after{
+    right: -5rem;   
+  }
+
+p {
+    font-family: 'Quattrocento', sans-serif;
+}
+
+h5 {
+    font-family: 'Rufina', serif;
+}
