--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
+<app-navbar></app-navbar>
 <app-header></app-header>
 <app-sobre-mi></app-sobre-mi>
 <app-educacion></app-educacion>
 <app-tecnologias></app-tecnologias>
 <app-proyectos></app-proyectos>
 <app-contacto></app-contacto>
-<app-footer></app-footer>
+<!--<div class="container-fluid">
 <router-outlet></router-outlet>
+</div>-->
+<app-footer></app-footer>
