--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -1,12 +1,6 @@
-<head>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Quattrocento&family=Rufina:wght@700&display=swap');
-    </style>
-</head>
-
 <!--Titulo-->
 <div class="container">
-    <div class="col-12 py-4 pt-5">
+    <div class="col-12 py-4 pt-3">
         <h2 class="display-6 mt-3 mb-3 h2-lines" id="titulo">PROYECTOS</h2>
     </div>
 </div>
@@ -19,8 +13,10 @@
                 <img src="../../../assets/img/proyecto1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Refuge4Pets</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text">Primer proyecto con Angular a partir de "Mioland"(https://ro008.github.io/minioland/minions), página creada por 'A ContracorrientTech' </p>
+                </div>
+                <div class="btn mb-3">
+                    <a class="btn btn-primary" href="#" role="button">Visitar sitio</a>
                 </div>
             </div>
         </div>
@@ -32,15 +28,8 @@
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
                         additional content. This content is a little bit longer.</p>
                 </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="../../../assets/img/proyecto1.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Refuge4Pets</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
+                <div class="btn mb-3">
+                    <a class="btn btn-primary" href="#" role="button">Visitar sitio</a>
                 </div>
             </div>
         </div>
@@ -51,6 +40,22 @@
                     <h5 class="card-title">Refuge4Pets</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
                         additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="btn mb-3">
+                    <a class="btn btn-primary" href="#" role="button">Visitar sitio</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="../../../assets/img/proyecto1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Refuge4Pets</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="btn mb-3">
+                    <a class="btn btn-primary" href="#" role="button">Visitar sitio</a>
                 </div>
             </div>
         </div>
